k8s/apps/web6/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web6
  namespace: cwx
spec:
  selector:
    app: web6
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9011
  type: ClusterIP
