k8s/apps/web6/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web6-route
  namespace: cwx
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - "web6.chenwx.top"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web6
          port: 80
